# mm-rag-fashionstyle-analyzer

./: .gitignore  Dockerfile  README.md  pyproject.toml  show_dataset.py
backend/: views.py
backend/models/: config.py  image_processor.py  llm_service.py
frontend/: index.css  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/components/ui/: button.tsx  card.tsx
