[project]
name = "fashion-style-finder-rag"
version = "1.0.0"
description = "IA system to analyze fashion & recommanding clothes"
authors = [
    {name = "julienlucas", email = "hello@julienlucas.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "image>=1.5.33",
    "langsmith>=0.2.0",
    "mistralai>=1.9.2",
    "numpy<2",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "transformers>=4.53.3",
    "onnxruntime (>=1.23.2,<2.0.0)",
    "onnx (>=1.20.1,<2.0.0)",
]
